# vision

./: README.md
erasers_line_finder/: CMakeLists.txt  package.xml
erasers_line_finder/src/: .front_line_cli.cpp.swp  front_line_cli.cpp  front_line_srv.cpp  front_point_cli.cpp  front_point_srv.cpp
erasers_nav_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
erasers_nav_msgs/msg/: LinePoint.msg  LinePoints.msg  ObjectsCentroid.msg  ObjectsCentroids.msg  OccupancyMaps.msg  OccupancyMaps.msg~  OccupancyPOVMap.msg~  OccupancyPOVMaps.msg  OccupancyPOVMaps.msg~  ProjectedMap.msg~  ProjectedMaps.msg~  ProjectedView.msg~  ProjectedViews.msg  ProjectedViews.msg~  RobotPose.msg~  RobotPoses.msg  SinglePoint.msg  SinglePoints.msg  SpaceCentroid.msg  SpaceCentroids.msg  VisionPlane.msg~
erasers_nav_msgs/srv/: GetClosestPoint.srv  GetLinePoint.srv  GetObjectsCentroid.srv  GetOccupancyMap.srv  GetOccupancyPOVMap.srv  GetOccupancyPOVMap.srv~  GetPointCloud.srv~  GetProjectedView.srv  GetProjectedView.srv~  GetRobotPose.srv  GetSpaceCentroid.srv  GetTopMap.srv~  SetHeadPose.srv~
erasers_object_finder/: CMakeLists.txt  package.xml
erasers_object_finder/src/: object_finder_cli.cpp  object_finder_srv.cpp  rgbd_src_node.cpp  space_finder_cli.cpp  space_finder_srv.cpp
erasers_robot_pose/: CMakeLists.txt  CMakeLists.txt~  package.xml
erasers_robot_pose/src/: mapping_pose_cli.cpp  mapping_pose_srv.cpp
erasers_tmp/: commands.txt  commands.txt~  debug_commands.txt  install.txt
erasers_tools/: CMakeLists.txt  CMakeLists.txt~  erasers_line_conf.yaml  erasers_pov_conf.yaml  package.xml  package.xml~
erasers_tools/include/erasers_tools/: linefinder.h  lineransac.h  planefinder.h  transformations.h
erasers_tools/src/: linefinder.cpp  linefinder.cpp~  lineransac.cpp  planefinder.cpp  transformations.cpp
erasers_top_map/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
erasers_top_map/src/: top_map_cli.cpp  top_map_srv.cpp  top_pov2map_cli.cpp  top_pov2map_srv.cpp
erasers_top_pov/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
erasers_top_pov/src/: top_pov_cli.cpp  top_pov_lis.cpp  top_pov_node.cpp  top_pov_srv.cpp
